ws_controller/log/build_2025-08-22_21-44-42/flight_controller_pkg/stderr.log
  File "/home/dron/ws_controller/install/flight_controller_pkg/lib/python3.10/site-packages/flight_controller_pkg/fc_control.py", line 303
    if missionStatus.heading + 180 < 360  
                                          ^
SyntaxError: expected ':'

